Many features added to landing page.

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,43 @@
 body {
   @apply font-sans;
 }
+
+
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.brand-slider {
+  display: flex;
+  width: fit-content;
+  animation: scroll 20s linear infinite;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+@keyframes scroll-x {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.comments-brand-slider {
+  display: flex;
+  width: max-content;
+  animation: scroll-x 25s linear infinite;
+}
