--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,9 @@ body {
 .animate-fade-in-down {
   animation: fade-in-down 0.3s ease-out;
 }
+
+@media screen and (min-width: 1280px) and (max-width: 1440px) {
+  body {
+    zoom: 0.9;
+  }
+}
